--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,14 +1,22 @@
 <resources>
     <string name="app_name">Wintec Karakia App</string>
     <string name="switch_video">Audio Only</string>
+    <string name="switch_torial">Show this again</string>
     <string name="button_origins">View Song Origins</string>
     <string name="switch_translate">English Lyrics</string>
     <string name="fragment_name_home">Home</string>
     <string name="fragment_name_karakia">Karakia Karaoke</string>
     <string name="fragment_name_tos">Terms Of Service</string>
+    <string name="fragment_name_settings">Settings</string>
+    <string name="fragment_name_search">Karakia Search</string>
+    <string name="fragment_name_about">About Us</string>
     <string name="button_close">Close</string>
     <string name="text_tos_header">Terms Of Service</string>
     <string name="text_tos_content">By agreeing to these terms of service you confirm that you are not a bot, martian, lizard person, time traveling vampire or frog, or are operating on behalf of one of an individual that would match said criteria.</string>
     <string name="button_agree">Agree</string>
     <string name="button_decline">Decline</string>
+    <string name="button_search">Search</string>
+    <string name="switch_searchTitles">Search Titles</string>
+    <string name="switch_searchWords">Search Words</string>
+    <string name="hint_search">Type to Search</string>
 </resources>
