--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,10 +21,11 @@
     <string name="hint_search">Type to Search</string>
     <string name="about_team_1">Rachata Triratjarasporn \nTeam Leader</string>
     <string name="about_team_2">Aidan Reid \nCore Programmer</string>
-    <string name="about_team_3">Hamish Malins \nGraphic and UI Designer</string>
+    <string name="about_team_3">Hamish Malins \nPresenter</string>
     <string name="about_team_4">Josephy O Dwyer \nDocumentation Specialist</string>
-    <string name="about_team_5">Andrew Law \nDocumentation Specialist</string>
-    <string name="about_team_6">Aadil Imran \nPresenter</string>
-    <string name="about_team_7">Jack Taylor \nPresenter</string>
+    <string name="about_team_5">Andrew Law \nDocumentation &amp; Animation</string>
+    <string name="about_team_6">Aadil Imran \nUI Implementation</string>
+    <string name="about_team_7">Jack Taylor \nPresenter &amp; Organiser</string>
     <string name="about_header">About Us</string>
+    <string name="karakia_heading">Karakia (blessings)</string>
 </resources>
