Changes made: - link to website for additional karakia info added to karakia origin screen.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@ is solely at your own risk.</string>
     <string name="about_team_7">Jack Taylor \nPresenter &amp; Organiser</string>
     <string name="about_header">About Us</string>
     <string name="karakia_heading">Karakia (blessings)</string>
+    <string name="Reference_1">More info</string>
 </resources>
